Exercise 09 "List Of Predicates" from the lesson for Functional Programming, a part of Java Advanced course.